undo file movements

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,700&family=Roboto:ital,wght@0,500;1,300;1,400&display=swap" rel="stylesheet" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>VirtualMe Demo</title>
-  <link href="../main.css" rel="stylesheet" />
+  <link href="main.css" rel="stylesheet" />
   <style>
     #movement-menu {
       position: fixed;
@@ -162,7 +162,7 @@
     }
   </script>
 
-  <script type="module" src="../main.js"></script>
+  <script type="module" src="main.js"></script>
   <script>
     // Placeholder function to handle movement change
     function updateMovement(movementFile) {
